why didnt README.md match any files?

--- a/gitfour/index.html
+++ b/gitfour/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>
+        Why isn't my readme.md file found in git bash?
+    </h1>
     <ul>
         <li>first</li>
         <li>second</li>
